# BargainHunting

./: .gitignore  CMakeLists.txt  README.md  listFile.txt  main.c  preferencesTest.txt  pseudo.md  styleGuide.md
src/: CMakeLists.txt  Calculations.c  Calculations.h  CreateMenu.c  CreateMenu.h  Database.c  Database.h  ListEditor.c  ListEditor.h  ListSearch.c  ListSearch.h  LoadUserPreferences.c  LoadUserPreferences.h  MergeSort.c  MergeSort.h  Search.c  Search.h  ShoppingListLoad.c  ShoppingListLoad.h  calculations.c  calculations.h  database.c  database.h  findCheapestProduct.c  findCheapestProduct.h  grocery_list.c  main.c  main.h  merchSort.c  merchSort.h  mergeSort.c  mergeSort.h  search.c  search.h  shoppingListLoad.c  shoppingListLoad.h
src/data/: data.txt
src/data/shopping_list/: list2.txt  list3.txt  mantas_shopping_list.txt  sinas_shopping_list.txt
