add_executable(main main.c main.h database.c preferences.c grocery_list.c calculations.c sort_shopping_list.c CreateMenu.c CreateMenu.h ListEditor.c ListEditor.h LoadUserPreferences.c LoadUserPreferences.h search.c search.h ListSearch.c ListSearch.h shoppingListLoad.c shoppingListLoad.h merchSort.c merchSort.h)
add_executable(database database.c database.h)
add_executable(search search.c search.h database.c CreateMenu.c)
file(COPY data DESTINATION ${CMAKE_CURRENT_BINARY_DIR})
add_executable(listSearch listSearch.c listSearch.h database.c shoppingListLoad.c search.c)