add_executable(main main.c main.h Database.c Calculations.c CreateMenu.c CreateMenu.h ListEditor.c ListEditor.h Search.c Search.h ListSearch.c ListSearch.h ShoppingListLoad.c ShoppingListLoad.h MergeSort.c MergeSort.h Calculations.h)
add_executable(database Database.c Database.h)
add_executable(search Search.c Search.h Database.c CreateMenu.c)
file(COPY data DESTINATION ${CMAKE_CURRENT_BINARY_DIR})
add_executable(listSearch listSearch.c listSearch.h Database.c ShoppingListLoad.c Search.c)